@@ -21,6 +21,8 @@ Version 0.3.9 (under dev!)
 * irc: reallow names beginning with "#" for servers
 * lua: fix crash when unloading a script without pointer to interpreter
 * python: fix crash when unloading a script without pointer to interpreter
+* scripts: ignore call to "register" (with a warning) if script is already
+  registered
 
 Version 0.3.8 (2012-06-03)
 --------------------------
